<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="network.waters.app.GPSPositionsActivity">

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:map="http://schemas.android.com/apk/res-auto"
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        map:mapType="normal"
        android:layout_above="@+id/tPoint"/>

    <TextView
        android:id="@+id/tPoint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="."
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="invisible" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        android:layout_below="@+id/tPoint">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/lStartTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/set_starttime"
                    android:textSize="18sp"
                    android:layout_marginLeft="10dp" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="2dp"
                    android:background="@color/colorPrimary" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp" >
                    <TextView
                        android:id="@+id/tStartTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="17sp"
                        android:text="@string/start_time_unset" />

                    <Button
                        android:id="@+id/bStartTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/set" />
                    <Button
                        android:id="@+id/bResetStartTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/reset" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lEndTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/set_endtime"
                    android:layout_marginLeft="10dp" />
                <View
                    android:layout_width="wrap_content"
                    android:layout_height="2dp"
                    android:background="@color/colorPrimary" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp">
                    <TextView
                        android:id="@+id/tEndTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="17sp"
                        android:text="@string/end_time_unset" />

                    <Button
                        android:id="@+id/bEndTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/set" />
                    <Button
                        android:id="@+id/bResetEndtTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/reset" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_marginTop="10dp"
                android:text="@string/results"
                android:layout_marginLeft="10dp" />
            <View
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:background="@color/colorPrimary"
                android:layout_marginBottom="10dp" />

            <TextView
                android:id="@+id/tNoResults"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_results"
                android:textSize="25sp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:animateLayoutChanges="true" />

            <TableLayout
                android:id="@+id/table_gps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:visibility="invisible"
                android:animateLayoutChanges="true">
            </TableLayout>
        </LinearLayout>
    </ScrollView>


</RelativeLayout>
